# violet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: face.glb  monkey.fbx
src/: CMakeLists.txt  GPUDependencyGraph.cpp  GPUDependencyGraph.h  GPUEngine.cpp  GPUEngine.h  GPUFeatureSet.h  GPUImage.cpp  GPUImage.h  GPUMesh.cpp  GPUMesh.h  GPUMeshWrangler.cpp  GPUMeshWrangler.h  GPUPipeline.cpp  GPUPipeline.h  GPUProcess.cpp  GPUProcess.h  GPUProcessCompletionAlert.cpp  GPUProcessCompletionAlert.h  GPUProcessRenderPass.cpp  GPUProcessRenderPass.h  GPUProcessSwapchain.cpp  GPUProcessSwapchain.h  GPUWindowSystemGLFW.cpp  GPUWindowSystemGLFW.h  device.cpp  device.h  glm_includes.h  main.cpp
src/shaders/: CMakeLists.txt  passthrough.frag  passthrough.vert  phong.frag  phong.vert
tiny_gltf/: CMakeLists.txt  tiny_gltf_implementation.cpp
